--- a/TKV2025_soubory/sheet010.htm
+++ b/TKV2025_soubory/sheet010.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=12128 style='border-collapse:
- collapse;table-layout:fixed;width:9109pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=12228 style='border-collapse:
+ collapse;table-layout:fixed;width:9184pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
@@ -241,8 +241,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=180 style='mso-width-source:userset;mso-width-alt:6582;
+ width:135pt'>
  <col class=xl70 width=128 style='mso-width-source:userset;mso-width-alt:4681;
  width:96pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -387,7 +387,7 @@ else
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=180 style='width:135pt'></td>
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -407,7 +407,7 @@ else
   <td class=xl70 width=128 style='width:96pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl178 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - PŘIBYSLAV -
   CELKOVÉ POŘADÍ</td>
   <td class=xl143>&nbsp;</td>
@@ -1085,7 +1085,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>25</td>
+  <td class=xl165 style='border-left:none'>26</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1214,8 +1214,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>36</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>25900</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>38</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>27300</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1349,13 +1349,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>38</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>25000</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>40</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>26200</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>21</td>
+  <td class=xl165 style='border-top:none;border-left:none'>22</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1575,8 +1575,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
   [CZE069712]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>31</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>15350</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>33</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>16250</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1800,8 +1800,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>30</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>14000</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>32</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>14700</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2023,8 +2023,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>35</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>12950</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>37</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>13850</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2158,15 +2158,15 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>34</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>10900</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>36</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>11500</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none'>Strašil Pavel [CZE015487]</td>
-  <td class=xl145 style='border-left:none'>24</td>
+  <td class=xl145 style='border-left:none'>25</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2513,7 +2513,7 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl82 style='border-top:none'>Ptáček Radim [CZE071042]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>12</td>
+  <td class=xl82 style='border-top:none;border-left:none'>13</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2659,9 +2659,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1600</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2684,8 +2686,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>24</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>8300</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>26</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>8800</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2840,9 +2842,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1600</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3020,9 +3024,12 @@ else
   [CZE069712]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šustáček David
+  [CZE068995]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3202,9 +3209,12 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3383,9 +3393,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3407,8 +3419,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>12</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Jan [CZE079725]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šustáček David
+  [CZE068995]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>6</td>
   <td class=xl70 style='border:.5pt solid windowtext'>2700</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3561,9 +3574,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3585,9 +3600,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>13</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Čermák Michal [CZE057910]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>1800</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Jan [CZE079725]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>2700</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3731,9 +3746,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Landová Aneta [CZE075881]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>600</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3755,10 +3772,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>14</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Šustáček David
-  [CZE068995]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Čermák Michal [CZE057910]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>1700</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1800</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3884,9 +3900,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>500</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -4483,7 +4501,7 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>19</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Novák Radek [CZE049908]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
@@ -4626,7 +4644,7 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>20</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Novák Radek [CZE049908]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
@@ -14679,7 +14697,7 @@ else
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=180 style='width:135pt'></td>
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
